<resources>
    <string name="app_name">ExpenseTracker</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="sign_in">SIGNIN</string>
    <string name="registration">REGISTRATION</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="help">Help</string>
    <string name="save">SAVE</string>
    <string name="already_a_member_login">already a member?Login</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="first_name">First Name</string>
    <string name="error_email_exists">sorry email already exixts</string>
    <string name="success_message">sucessfully created</string>
    <string name="error_password_match">password does not match</string>
    <string name="first_name_error_message">first name error</string>
    <string name="last_name_error_message">last name error</string>
    <string name="error_message_email">email error</string>
    <string name="enter_password_text">enter your password</string>
    <string name="error_message_date_of_birth">enter date of birth</string>
    <string name="email_already_exist_text">email already exists</string>
    <string name="password_match">password matched</string>
    <string name="error_valid_email_password_text">wrong email or password</string>
    <string name="error_message_password_text">password wrongg</string>

    <string name="permission_enable_error_text">permission enable error</string>
    <string name="camera_message_text">Camera Message</string>
    <string name="open_settings_text">Open Settings</string>
    <string name="text_no">Text No</string>
    <string name="add_photo_text">Add Photo</string>


    <string-array name="image_options">
        <item>Take Photo</item>
        <item>Choose from Gallery</item>
        <item>Cancel</item>
    </string-array>
    <string name="title_activity_sign_in">SignIn</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="income">INCOME</string>
    <string name="EXPENSE">EXPENSE</string>
    <string name="savings">SAVINGS</string>
    <string name="investment_news">INVESTMENT NEWS</string>
    <string name="xyz_text">XYZ</string>
    <string name="scan_qr_code_txt">scan QR</string>
    <string name="scan_result_for_qr_code_text">Scan Result</string>
    <string name="name_text">Name</string>
    <string name="address_text">address</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="enter_incomes">ENTER YOUR INCOMES HERE</string>
    <string name="text_hint_salary">Salary</string>
    <string name="text_add_income">ADD INCOME</string>
    <string name="text_view_all_income">VIEW ALL INCOMES</string>
    <string name="delete_text">DELETE</string>
    <string name="edit_text">EDIT</string>
    <string name="income_source_text">income source</string>
    <string name="inr_40000_text">INR 40000</string>
    <string name="date_and_time_text">DATE AND TIME</string>
    <string name="_2017_09_30_10_00_00_text">2017-09-30 10:00:00</string>
    <string name="total_savings_text">Total Savings</string>
    <string name="savings_text">SAVINGS</string>
    <string name="total_incomes_text">Total Incomes</string>
    <string name="enter_total_incomes_text">Total Incomes</string>
    <string name="total_expenses_text">Total Expenses</string>
    <string name="enter_total_expenses_text">Enter total expenses</string>
    <string name="reports_email_text">REPORT</string>
    <string name="login_screen_text">Login Screen</string>
    <string name="login_data_text">Here in this screen yo need to login</string>
    <string name="sign_in_data_text">Here you can press any button</string>
    <string name="sign_in_screen_text">Sign In Screen</string>
    <string name="splash_data_text">Splash Screen which appear for 2 sec</string>
    <string name="splash_screen_text">Splash Screen</string>
    <string name="register_data_text">Register your details here</string>
    <string name="register_screen_text">Registration Screen</string>
    <string name="call_adviser_text">Call Adviser</string>
    <string name="send_message_text">Send Message</string>


    <array name="ExpenseSource">
        <item>Salary</item>
        <item>Buisness</item>
        <item>Rent</item>

        <item>Others</item>
    </array>
</resources>
