<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.squareandcube.expensetracker.SignIn"
    tools:showIn="@layout/app_bar_sign_in"
android:layout_centerInParent="true"
    android:layout_margin="@dimen/dimen_20dp"
    android:orientation="vertical">

    <Button
        android:layout_marginTop="120dp"
        android:id="@+id/income_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/sign_selector"
        android:text="@string/income"
        />
    <Button
        android:id="@+id/expense_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@drawable/sign_selector"
        android:text="@string/EXPENSE"
       />
    <Button
        android:id="@+id/Content_Savings_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@drawable/sign_selector"
        android:text="@string/savings"
       />
    <Button
        android:id="@+id/investment_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@drawable/sign_selector"
        android:text="@string/investment_news"
       />


    </LinearLayout>

