<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"

    tools:context="com.squareandcube.expensetracker.QRCodeScanner">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimen_30dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:text="@string/scan_result_for_qr_code_text"/>

    <LinearLayout
        android:layout_margin="@dimen/dimen_20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@color/colorPrimary"
        android:paddingTop="@dimen/dimen_20dp"
        android:paddingBottom="@dimen/dimen_20dp"
        android:paddingLeft="@dimen/dimen_20dp"
        android:paddingRight="@dimen/dimen_20dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen_20dp"
            android:text="@string/name_text"
            android:layout_marginTop="@dimen/dimen_10"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xyz_text"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/dimen_10"
            android:background="@drawable/shape_button"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:textSize="@dimen/dimen_20dp"
            android:textColor="@color/colorWhite"
            android:text="@string/address_text" />

        <TextView
            android:id="@+id/textViewAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xyz_text"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:background="@drawable/shape_button"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />


    </LinearLayout>


    <Button
        android:layout_margin="@dimen/dimen_20dp"
        android:id="@+id/buttonScan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"
        android:text="@string/scan_qr_code_txt"
        android:layout_marginBottom="@dimen/dimen_20dp"/>
</RelativeLayout>
