<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/Login_ScrollView"
    android:background="@color/colorPrimaryDark"
    tools:context="com.squareandcube.expensetracker.LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dimen_20dp">

        <ImageView
            android:id="@+id/logo_ImageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_login_page_logo" />
        <android.support.design.widget.TextInputLayout
android:id="@+id/user_TextInputLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_40dp"
    android:layout_below="@id/logo_ImageView">
    <EditText
        android:id="@+id/username_EditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColorHighlight="@color/colorTextLine"
        android:layout_marginTop="@dimen/dimen_50dp"
        android:drawableRight="@drawable/ic_user_name_image"
        android:hint="@string/username"
        android:singleLine="true"/>
</android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_TextInputLayout"
        android:layout_marginTop="@dimen/dimen_20dp">
        <EditText
            android:id="@+id/password_EditText"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="match_parent"
            android:drawableRight="@drawable/ic_password_image"
            android:hint="@string/password" />
    </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sign_in_Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_selector"
            android:layout_below="@id/password_TextInputLayout"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:text="@string/sign_in"
            android:textColor="@color/colorWhite"/>
        <Button
            android:id="@+id/Registration_Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_selector"
            android:layout_below="@id/sign_in_Button"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:text="@string/registration"
            android:textColor="@color/colorWhite"
            android:layout_marginBottom="@dimen/dimen_30dp"/>





        <TextView
            android:id="@+id/Password_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Registration_Button"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textSize="@dimen/dimen_15dp"
          android:layout_marginLeft="@dimen/dimen_100dp"
            android:textColor="@color/colorTextLine"
            android:layout_marginBottom="@dimen/dimen_50dp"/>



</RelativeLayout>
</ScrollView>
