<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context="com.squareandcube.expensetracker.SavingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_20dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/savings"
            android:padding="@dimen/dimen_20dp"
            android:textAllCaps="true"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/dimen_30dp"/>

        <TextView
            android:id="@+id/totalIncome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/income"
            android:textSize="@dimen/dimen_20dp"
            android:textColor="@color/colorWhite"/>

        <TextView
        android:id="@+id/totalIncomeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_total_incomes_text"
        android:textSize="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@drawable/shape_button"
        android:textColor="@color/colorPrimary"/>
        <TextView
            android:id="@+id/totalExpenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="EXPENSE"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:textSize="@dimen/dimen_20dp"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:id="@+id/totalExpenseView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_total_incomes_text"
            android:textSize="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:background="@drawable/shape_button"
            android:textColor="@color/colorPrimary"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/savingsButton"
            android:text="TOTAL SAVINGS"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:background="@drawable/button_selector"/>
        <TextView
            android:id="@+id/totalSavingView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/total_savings_text"
            android:textSize="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:background="@drawable/shape_button"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>
</LinearLayout>